[3.7] bpo-33475: Fix and improve converting annotations to strings. (GH-6774). (GH-6927)

(cherry picked from commit 64fddc423fcbe90b8088446c63385ec0aaf3077c)

Co-authored-by: Serhiy Storchaka <storchaka@gmail.com>